enable and disable logger

--- a/NLog_v1.0/NLog_v1.0/NLog.config
+++ b/NLog_v1.0/NLog_v1.0/NLog.config
@@ -4,15 +4,19 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Trace" internalLogFile="c:\temp\nlog-internal.log">
-  <variable name="myvar" value="myvalue"/>
+      internalLogLevel="Trace" internalLogFile="C:/Projects/NLog/NLog_v1.0/LogFiles/nlog-internal.log">
+  <variable 
+    name="logDirectory" 
+    value="C:/Projects/NLog/NLog_v1.0/LogFiles"/>
   <targets>
-    <target name="errorlog" xsi:type="File" fileName="error.txt"/>
-    <target name="debuglog" xsi:type="File" fileName="debug.txt"/>
+    <target name="errorlog" xsi:type="File" fileName="${logDirectory}/error/${shortdate}.txt"/>
+    <target name="debuglog" xsi:type="File" fileName="${logDirectory}/debug/${shortdate}.txt"/>
   </targets>
   <rules>
-    <!--this * means which class logs have to be in the log files--> 
-    <logger name="*" level="Error" writeTo="errorlog" />
+    <!--this * means which class logs have to be in the log files-->
+    <!--Disable all loggers-->
+    <!--<logger name="*" minLevel="Trace" final="true" />-->
+    <logger name="*" level="Error" writeTo="errorlog" enabled="false" />
     <logger name="*" level="Debug" writeTo="debuglog" />
   </rules>
 </nlog>
